<resources>
    <string name="app_name">Quick_Ticket</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="login_text">Login Page</string>
    <string name="username_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="attempts_text">Attempts:</string>
    <string name="button_login">Login</string>
    <string name="second_page_text">Welcome to the second page</string>
</resources>
